--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -6,78 +6,73 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrieren"
-        android:textColor="#2196F3"
-        tools:layout_editor_absoluteX="295dp"
-        tools:layout_editor_absoluteY="642dp" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Abbrechen"
-        android:textColor="#2196F3"
-        tools:layout_editor_absoluteX="189dp"
-        tools:layout_editor_absoluteY="642dp" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Datenschutz"
-        android:textColor="#2196F3"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="642dp" />
-
-    <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="197dp"
         android:text="Oder Anmelden mit:"
         android:textColor="@color/black"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="463dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="139dp"
         android:text="Mit Google anmelden"
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="496dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="122dp"
+        android:layout_marginBottom="29dp"
         android:text="Mit Facebook anmelden"
         android:textColor="@color/black"
         app:backgroundTint="@color/white"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="564dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="160dp"
         android:text="App-Name"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="44dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="236dp"
         android:layout_height="308dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginEnd="85dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="132dp">
+        app:layout_constraintTop_toBottomOf="@+id/textView17">
 
         <TextView
             android:id="@+id/textView10"
@@ -152,6 +147,42 @@
             android:text="Oder Anmelden mit:"
             android:textColor="@color/black" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="2dp"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7">
+
+        <TextView
+            android:id="@+id/textView19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Registrieren"
+            android:textColor="#2196F3" />
+
+        <TextView
+            android:id="@+id/textView20"
+            android:layout_width="68dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Abbrechen"
+            android:textColor="#2196F3" />
+
+        <TextView
+            android:id="@+id/textView21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Datenschutz"
+            android:textColor="#2196F3" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
