--- a/app/src/main/res/menu/nav_popup.xml
+++ b/app/src/main/res/menu/nav_popup.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/startseite"
+        android:title="Startseite" />
+
     <item android:id="@+id/chat_bot"
         android:title="Chat Bot" />
 
