--- a/app/src/main/res/layout/activiry_registrierung_2.xml
+++ b/app/src/main/res/layout/activiry_registrierung_2.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="?attr/colorPrimary"
+        android:background="@android:color/darker_gray"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
