--- a/app/src/main/res/layout/activity_ubungen_1.xml
+++ b/app/src/main/res/layout/activity_ubungen_1.xml
@@ -9,7 +9,7 @@
         android:id="@+id/start_seite_toolbar4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@android:color/darker_gray"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
